pr6/frontend/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        # - image: evgenua/journal-server:v1.0
        - image: brendanburns/journal-server:latest
          imagePullPolicy: Always
          name: frontend
          volumeMounts:
            - name: passwd-volume
              readOnly: true
              mountPath: "/etc/redis-passwd"
          resources:
            limits:
              cpu: "1.0"
              memory: "1G"
      volumes:
        - name: passwd-volume
          secret:
            secretName: redis-passwd
