pr6/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: default
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: frontend
                port: 
                  number: 8080
          # Примечание: должен идти после /api,
          # иначе он будет перехватывать запросы
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fileserver
                port: 
                  number: 80
